# Max-bot

./: .gitignore  Cargo.toml  README.md  config.toml  config.toml.ex  guilds
src/: commands.rs  db.rs  error.rs  events.rs  functions.rs  listeners.rs  main.rs
src/commands/: fun.rs  mod.rs  owner.rs  utils.rs
src/commands/admin/: antispam.rs
src/commands/fun/: captcha.rs  clyde.rs  harck.rs  mod.rs  phcom.rs  trumptweet.rs  vanish.rs
src/commands/guild/: addemote.rs  createchannel.rs  mod.rs
src/commands/moderation/: ban.rs  mod.rs  warn.rs
src/commands/owner/: admsay.rs  apiai.rs  mod.rs  quit.rs  setstatus.rs  test.rs
src/commands/utils/: guild_reset.rs  guildinfo.rs  links.rs  mod.rs  moption.rs  ping.rs  say.rs  vote.rs
src/db/: antispam.rs  case.rs  guild.rs  user.rs  vote.rs
src/events/: member_add.rs  message.rs  message_delete.rs
src/functions/: base_messages.rs  id.rs
src/listeners/: guild_create.rs  message.rs  ready.rs  resume.rs
tmp/: antispam
