[package]
name = "max_bot"
version = "0.1.0"
authors = ["Maxime <maxime@pvpzone.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "0.2.16", features = ["macros", "rt-threaded", "blocking"] }
serenity = { git = "https://github.com/Lakelezz/serenity/", branch = "await" }
config = "0.10.1"
log = "0.4.8"
env_logger = "0.7.1"
rand = "0.7.3"
sqlx = { version = "0.3.3", default-features = false, features = ["runtime-tokio", "macros", "sqlite"] }