[package]
name = "max_bot"
version = "0.1.0"
authors = ["Maxime <maxime@pvpzone.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sql-builder = "0.12.0"
tokio = { version = "0.2.16", features = ["macros", "rt-threaded", "blocking"] }
serenity = { git = "https://github.com/Lakelezz/serenity/", branch = "await", features=["collector", "http"] }
config = "0.10.1"
log = "0.4.8"
env_logger = "0.7.1"
rand = "0.7.3"
mysql_async = "0.23.0"