[package]
name = "max_bot"
version = "0.1.0"
authors = ["Maxime <maxime@pvpzone.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "0.2.16", features = ["macros", "rt-threaded", "blocking", "stream"] }
serenity = { git = "https://github.com/Lakelezz/serenity/", branch = "await-oom", features=["collector", "http", "framework"] }
config = "0.10.1"
log = "0.4.8"
env_logger = "0.7.1"
# rustbreak = "1.4.0"
serde = "1.0.111"

[dependencies.rustbreak]
version = "1.4.0"
default-features = false
features = ["yaml"]